--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ tungstenite = { version = ">=0.20.1", optional = true }
 url = { version = "2.2", optional = true }
 integer-encoding = "3.0.2"
 lazy_static = "1.4.0"
-
+bytes = "1.0.1"
 [target.'cfg(target_os = "linux")'.dependencies.nix]
 version = "0.26.2"
 default-features = false
